feat: AI 占卜、错误文案展示与配置说明
- 后端: LLM 客户端、POST /api/fortune/ai，401/认证错误返回 503 友好提示
- 前端: 抽签/AI 占卜失败时展示后端 error 文案，新增 .env.example 与 README 说明
- Docker: backend 使用 OPENAI_API_KEY/OPENAI_BASE_URL，Go 版本与代理修复

Made-with: Cursor

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,12 +1,15 @@
-FROM golang:1.22-alpine AS build
+FROM golang:1.24-alpine AS build
 
 WORKDIR /app
 
-COPY backend/go.mod ./
+# 使用国内/备用代理，避免 proxy.golang.org 超时
+ENV GOPROXY=https://goproxy.cn,direct
+
+COPY backend/go.mod backend/go.sum ./
 COPY backend/cmd ./cmd
 COPY backend/internal ./internal
 
-RUN go mod tidy && go build -o server ./cmd/server
+RUN go mod download && go build -o server ./cmd/server
 
 FROM alpine:3.20
 
