--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ backend/vendor/
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
+frontend/test-results/
+frontend/tsconfig.app.tsbuildinfo
+frontend/tsconfig.node.tsbuildinfo
 *.log
 npm-debug.log*
 
